# vcu-core-2024

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.bat  post_sil_build.ps1  sil_build.ps1
sil/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  VcuCore.cpp  VcuCore.h  VcuModel.cpp  VcuModel.h  VcuParameters.h  vcu_core.cpp  vcu_core.h
src/blocks/: AppsProcessor.cpp  AppsProcessor.h  BseProcessor.cpp  BseProcessor.h  Cooling.cpp  Cooling.h  Dash.cpp  Dash.h  DragReductionSystem.cpp  DragReductionSystem.h  Indicators.cpp  Indicators.h  Prndl.cpp  Prndl.h  SocEstimation.cpp  SocEstimation.h  SoftShutdown.cpp  SoftShutdown.h  Steering.cpp  Steering.h  Stompp.cpp  Stompp.h  TorqueMap.cpp  TorqueMap.h  TrackPositioning.cpp  TrackPositioning.h  TractionControl.cpp  TractionControl.h  WheelMagnets.cpp  WheelMagnets.h
src/parameters/: FunctionParameter2D.h  VcuParameters.h
src/util/: MathUtils.h  Structs.h
src/util/filters/: Debounce.cpp  Debounce.h  Differentiator.cpp  Differentiator.h  ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.h  KalmanFilter.cpp  KalmanFilter.h  LowPassFilter.cpp  LowPassFilter.h  Timer.cpp  Timer.h
src/util/math/: Matrix.cpp  Matrix.h  Position.cpp  Position.h
src/util/parameters/: CurveParameter.cpp  CurveParameter.h  FunctionParameter2D.cpp  FunctionParameter3D.cpp  FunctionParameter3D.h  SurfaceParameter.cpp  SurfaceParameter.h
tests/: CMakeLists.txt  ExtendedKalmanFilterTests.cpp  KalmanFilterTests.cpp  MatrixTests.cpp  VcuTests.cpp
tests/blocks/: AppsProcessorTests.cpp  BseProcessorTests.cpp  ParameterTests.cpp  PrndlTests.cpp  SocEstimationTests.cpp  SteeringTests.cpp  StomppTests.cpp  TorqueMapTests.cpp  TrackPositioningTests.cpp  TractionControlTests.cpp  WheelMagnetTests.cpp
